using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    // Start is called before the first frame update
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_FALL = "fall";

    public const string TAG_BRICK = "Brick";
    public const string TAG_STAIR = "Stair";
    public const float DISTANCE_BRICK = 0.5f;
    public const string TAG_CHARACTER = "Character";
}
